log
Thu 14 Sep 2023 07:14:15 PM UTC: 
 tests:  1|8
total_score: 0/70
ce46689
Thu 14 Sep 2023 07:24:05 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:28: error: ‘key1’ undeclared (first use in this function); did you mean ‘k1’?
   41 |         int k1 = *((int*) (key1));
      |                            ^~~~
      |                            k1
treemap.c:41:28: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:42:28: error: ‘key2’ undeclared (first use in this function); did you mean ‘k2’?
   42 |         int k2 = *((int*) (key2));
      |                            ^~~~
      |                            k2
treemap.c:43:18: error: returning ‘int’ from a function with return type ‘TreeMap *’ makes pointer from integer without a cast [-Werror=int-conversion]
   43 |         return k1<k2;
      |                ~~^~~
cc1: all warnings being treated as errors
Compilation failed
63fbd7a
